2002-05-18  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkhtml.in: Detect whether we're processing SGML or XML. 

	* gtkdoc-mkdb.in: New option --output-format to switch between
	SGML and XML output.

	* Makefile.am (EXTRA_DIST): Add xml.dcl
	
	* xml.dcl: The XML declaration.

2002-05-06  jacob berkman  <jacob@ximian.com>

	* gtkdoc-scangobj.in: add an include for the GTK_CHECK_VERSION
	macro

2002-05-05  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in: Output style properties.  (#80659)

	* gtkdoc-mkdb.in (GetArgs): Return separate sections for
	properties, child properties and style properties.  (#80659)

2002-05-03  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in: Fix for segfault in scangobj-generated C
	program on Solaris.  (#80606, Jacob Berkman)

2002-05-01  Matthias Clasen  <maclas@gmx.de>

	* tools/docpercentages.pl: Add the script which Owen uses for the 
	d.g.o online API docs. Its easier to keep in sync here.

	* gtkdoc-mkdb.in (OutputMissingDocumentation): Fix
	$MODULE-undocumented.txt for d.g.o online API docs.
	
	* gtkdoc-mkdb.in (GetArgs): Use blurbs for property documentation.

	* gtkdoc-scangobj.in: Output child properties. Output nicks and
	blurbs for properties.

2002-04-28  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ScanSourceFile): Don't scan for return value
	descriptions unnecessarily.  (#65997)

2002-03-11  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in, gtkdoc-mkdb.in: Create docs for signals on interfaces.

2002-02-01  Damon Chaplin  <damon@ximian.com>

	* configure.in: check for openjade or jade. Patch from Stefan Kost
	<kost@imn.htwk-leipzig.de>.

	* gtkdoc-mkhtml.in: use @JADE@ so the correct version of jade is used.

	* autogen.sh: commented out autoheader since we don't have a config.h.

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* Released 0.9.

2002-02-01  Damon Chaplin  <damon@ximian.com>

	* examples/Makefile.am: added SCANOBJ_OPTIONS in case the module needs